--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,11 @@ quarkus.datasource.db-kind=h2
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.sql-load-script=import.sql
 
+quarkus.container-image.build=true
 quarkus.container-image.registry=docker.io
 quarkus.container-image.group=luismiguelpeixoto640
 quarkus.container-image.name=k8-cert
 quarkus.container-image.tag=1.0.0-SNAPSHOT
 quarkus.kubernetes.service-type=load-balancer
+
+smallrye.jwt.sign.key.location=./jwt/privateKey.pem
